--- a/.github/workflows/build_custom.yml
+++ b/.github/workflows/build_custom.yml
@@ -114,8 +114,8 @@ jobs:
         curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/shell/build.sh -o build.sh
         curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/build_custom.sh -o build_custom.sh
         chmod +x *.sh && ./build_custom.sh
-        if [ ! -f CHANGELOG.txt ];then
-          echo -e "# Build Log\n- Build Date: $(date)\n- Linux Version: $(make kernelversion)\n- Complier: `cat out/.config | grep -w "Compiler" | sed 's/^# Compiler: //'`" > $GITHUB_WORKSPACE/CHANGELOG.txt
+        if [ ! -f CHANGELOG.md ];then
+          echo -e "# Build Log\n- Build Date: $(date)\n- Linux Version: $(make kernelversion)\n- Complier: `cat out/.config | grep -w "Compiler" | sed 's/^# Compiler: //'`" > CHANGELOG.md
         fi
 
     - name: Upload Release
@@ -135,7 +135,7 @@ jobs:
           android-kernel/release/*.zip
           android-kernel/release/Image*
           android-kernel/release/dtb*
-        body_path: CHANGELOG.txt
+        body_path: android-kernel/CHANGELOG.md
         prerelease: false
         make_latest: true
         # note you'll typically need to create a personal access token
