--- a/.github/workflows/build_custom.yml
+++ b/.github/workflows/build_custom.yml
@@ -107,7 +107,9 @@ jobs:
         export GITHUB_TOKEN="${{ secrets.ACTION }}"
         export OWNER=${{ github.actor }}
         curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/shell/down_git.sh -o down_git.sh
-        chmod +x down_git.sh && bash down_git.sh "${{ inputs.KERNEL_SOURCE_BRANCH }}"
+        curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/shell/build.sh -o build.sh
+        curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/build_custom.sh -o build_custom.sh
+        chmod +x *.sh && bash down_git.sh "${{ inputs.KERNEL_SOURCE_BRANCH }}"
 
     - name: Build Kernel With Custom
       if: inputs.BUILD_ENV =='none'
@@ -124,11 +126,9 @@ jobs:
         export TOOLCHAIN="${{ inputs.TOOLCHAIN }}"
 
         cd $GITHUB_WORKSPACE/android-kernel
-        curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/shell/build.sh -o build.sh
-        curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/build_custom.sh -o build_custom.sh
-        chmod +x *.sh && ./build_custom.sh ${{ inputs.BUILD_ARGS }}
+        ./build_custom.sh ${{ inputs.BUILD_ARGS }}
         if [ ! -f CHANGELOG.md ];then
-          echo -e "# Build Log\n- Commit: $(git log --oneline -1)\n- Build Date: $(date)\n- Linux Version: $(make kernelversion)\n- Complier: `cat out/.config | grep -w "Compiler" | sed 's/^# Compiler: //'`" > CHANGELOG.md
+          echo -e "# Build Log\n- Commit: $(git log --oneline -1)\n- Build Date: $(date)\n- Linux Version: $(make kernelversion)\n- Complier: `cat complier.version`" > CHANGELOG.md
         fi
 
     - name: Build Kernel By Custom In Docker
@@ -136,15 +136,13 @@ jobs:
       run: |
         export GITHUB_TOKEN="${{ secrets.ACTION }}"
         cd $GITHUB_WORKSPACE/android-kernel
-        curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/shell/build.sh -o build.sh
-        curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3.raw" https://raw.githubusercontent.com/${{ github.actor }}/Build_Kernel_Action/enuma/build_custom.sh -o build_custom.sh
-        chmod +x *.sh
 
         docker run --name kb --privileged=true \
           -v $(pwd)/.cache/ccache/:/root/.cache/ccache/ \
           -v $(pwd):/root/source \
           -v /etc/timezone:/etc/timezone \
-          -e "GITHUB_TOKEN='${{ secrets.ACTION }}'" \
+          -e "OWNER=${{ github.actor }}" \
+          -e "GITHUB_TOKEN=${{ secrets.ACTION }}" \
           -e "KBUILD_BUILD_HOST=docker_builder" \
           -e "KBUILD_BUILD_USER='$(echo ${{ github.actor }} | tr A-Z a-z)'" \
           -e "KERNEL_TAG='${{ env.PUBLISH_RELEASE_VERSION }}'" \
@@ -154,10 +152,10 @@ jobs:
           -e "TOOLCHAIN=${{ inputs.TOOLCHAIN }}" \
           -e "ENABLE_CONFIG='${{ inputs.ENABLE_CONFIG }}'" \
           -e "DISABLE_CONFIG='${{ inputs.DISABLE_CONFIG }}'" \
-          ubuntu bash -c  "apt-get update && apt install -y sudo git cpio curl llvm lld wget vim git ccache automake flex lzop bison gperf build-essential zip zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler kmod python3 python3-pip python-is-python3 && /root/source/build_custom.sh ${{ inputs.BUILD_ARGS }}"
+          ${{ github.actor }}/kernel_builder:base bash -c  "/root/source/build_custom.sh ${{ inputs.BUILD_ARGS }}"
 
         if [ ! -f CHANGELOG.md ];then
-          echo -e "# Build Log\n- Commit: $(git log --oneline -1)\n- Build Date: $(date)\n- Linux Version: $(make kernelversion)\n- Complier: `cat out/.config | grep -w "Compiler" | sed 's/^# Compiler: //'`" > CHANGELOG.md
+          echo -e "# Build Log\n- Commit: $(git log --oneline -1)\n- Build Date: $(date)\n- Linux Version: $(make kernelversion)\n- Complier: `cat complier.version`" > CHANGELOG.md
         fi
 
     - name: Upload Release
