--- a/.github/workflows/build_custom.yml
+++ b/.github/workflows/build_custom.yml
@@ -152,7 +152,7 @@ jobs:
           -e "TOOLCHAIN=${{ inputs.TOOLCHAIN }}" \
           -e "ENABLE_CONFIG='${{ inputs.ENABLE_CONFIG }}'" \
           -e "DISABLE_CONFIG='${{ inputs.DISABLE_CONFIG }}'" \
-          ${{ github.actor }}/kernel_builder:base bash -c  "/root/source/build_custom.sh ${{ inputs.BUILD_ARGS }}"
+          $(echo ${{ github.actor }} | tr A-Z a-z)/kernel_builder:base bash -c  "/root/source/build_custom.sh ${{ inputs.BUILD_ARGS }}"
 
         if [ ! -f CHANGELOG.md ];then
           echo -e "# Build Log\n- Commit: $(git log --oneline -1)\n- Build Date: $(date)\n- Linux Version: $(make kernelversion)\n- Complier: `cat complier.version`" > CHANGELOG.md
