--- a/.github/workflows/build_custom.yml
+++ b/.github/workflows/build_custom.yml
@@ -89,9 +89,9 @@ jobs:
     - name: Setup Ccache
       uses: actions/cache@v3
       with:
-        key: ${{ runner.os }}-build-kernel@${{ env.SOURCE_BRANCH }}
+        key: Ccache-${{ runner.os }}-build-kernel@${{ env.SOURCE_BRANCH }}
         path: |
-          $GITHUB_WORKSPACE/.cache/ccache
+          .cache/ccache
 
     - name: Download kernel source
       run: |
@@ -152,3 +152,9 @@ jobs:
         # note you'll typically need to create a personal access token
         # with permissions to create releases in the other repo
         # token: ${{secrets.ACTION}}
+        
+    - name: Upload Ccache
+      uses: actions/upload-artifact@v4
+      with:
+        name: Ccache-${{ runner.os }}-build-kernel@${{ env.SOURCE_BRANCH }}
+        path: .cache/ccache
